# rust_chef

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROJECT_SUMMARY.md  README.md  build.sh  dev.sh  package-lock.json  package.json  test_api.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/operations/: crypto.rs  data.rs  encoding.rs  hashing.rs  mod.rs  text.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Header.tsx  InputOutput.tsx  OperationsList.tsx  Recipe.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
