[package]
name = "rust_chef_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
base64.workspace = true
hex.workspace = true
sha1 = "0.10"
sha2.workspace = true
md-5 = "0.10"
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
url.workspace = true

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
aes = "0.8"
cbc = "0.1"
rand = "0.8"
percent-encoding = "2.3"
crc32fast = "1.3"
adler = "1.0"
ntlm-hash = "0.1"
unicode-normalization = "0.1"
